--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/AlexeyTeterin/rsclone#readme",
   "devDependencies": {
+    "@types/bootstrap": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "@webpack-cli/init": "^1.1.1",
@@ -33,9 +34,9 @@
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
@@ -44,6 +45,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^5.0.0-beta1",
     "normalize.css": "^8.0.1"
   }
 }
