--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,12 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "import/extensions": ["error", "ignorePackages", {
+        "ts": "never",
+        "tsx": "never",
+        "js": "never",
+        "jsx": "never",
+        "mjs": "never"
+      }]
     }
 }
