--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/AlexeyTeterin/rsclone#readme",
   "devDependencies": {
-    "@types/bootstrap": "^5.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "@webpack-cli/init": "^1.1.1",
+    "@types/bootstrap": "^5.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "@webpack-cli/init": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
-    "mini-css-extract-plugin": "^1.3.4",
+    "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "ts-loader": "^8.0.14",
@@ -47,7 +47,8 @@
   "dependencies": {
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^5.0.0-beta1",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "normalize.css": "^8.0.1",
-    "swiper": "^6.4.5"
+    "swiper": "^6.4.10"
   }
 }
