--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rsclone",
   "version": "1.0.0",
-  "description": "",
+  "description": "Данное приложение было выполнено в рамках задания [**RS Clone**](https://github.com/rolling-scopes-school/tasks/blob/master/tasks/rsclone/rsclone.md)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,24 +21,31 @@
   },
   "homepage": "https://github.com/AlexeyTeterin/rsclone#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
     "@types/bootstrap": "^5.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "@webpack-cli/init": "^1.1.2",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "@webpack-cli/init": "^1.1.3",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.22.0",
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
-    "ts-loader": "^8.0.14",
+    "ts-loader": "^8.0.16",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.14.0",
@@ -47,9 +54,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "bootstrap": "^5.0.0-beta1",
     "eslint-import-resolver-typescript": "^2.3.0",
     "normalize.css": "^8.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "swiper": "^6.4.10"
-  }
+  },
+  "keywords": []
 }
