--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "es6": true
   },
   "extends": [
-    "airbnb-base"
+    "plugin:react/recommended",
+    "airbnb"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -12,6 +13,9 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
@@ -21,11 +25,14 @@
     }
   },
   "plugins": [
+    "react",
     "@typescript-eslint"
   ],
   "rules": {
     "import/extensions": "off",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"]
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "react/destructuring-assignment": ["off", "always", { "ignoreClassFields": true }],
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
   }
 }
